[package]
name = "amc-gitflow-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
auto-context = "0.1.1"
base-traits = "0.0.13"
clap = { version = "4.6.0", features = ["derive", "env"] }
colored = "3.1.1"
duct = "1.1.1"
lazy_static = "1.5.0"
regex = { version = "1.12.3", features = ["use_std"] }
velvetio = "0.1.0"
