[package]
name = "amc-gitflow-rs"
version = "0.1.0"
edition = "2024"
authors = ["AwpMsnSoft <wgse-develop@awpmcncoft.anonaddy.com>"]
description = "A personal customized Gitflow implementation in Rust, integrated with GitHub CLI (gh) to automate Pull Request and Release workflows."
repository = "https://github.com/AwpMsnSoft/amc-gitflow-rs"
license = "MIR OR Apache-2.0"
keywords = ["gitflow", "git", "github", "gh", "automation"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.102"
auto-context = "0.1.1"
base-traits = "0.0.13"
clap = { version = "4.6.0", features = ["derive", "env"] }
colored = "3.1.1"
duct = "1.1.1"
lazy_static = "1.5.0"
regex = { version = "1.12.3", features = ["use_std"] }
tempfile = "3"
try_map = "0.3.1"
velvetio = "0.1.0"
